getting started: book

--- a/views/page/calc-book.ejs
+++ b/views/page/calc-book.ejs
@@ -106,7 +106,7 @@
 	
 	<div class="get_started">
 		<p>What are you waiting for?</p>
-		<a href="/getting-started">GET STARTED</a>
+		<a href="/getting-started/1">GET STARTED</a>
 	</div>
 </div>
 <h2>BOOK WRITING CALCULATOR</h2>
