advice from authors

--- a/views/page/calc-book.ejs
+++ b/views/page/calc-book.ejs
@@ -88,11 +88,21 @@
 		text-transform: uppercase;
 	}
 	
-	.content {
+	div.content {
 		clear:both;
 		margin-top:50px;
 		padding-top:50px;
 		border-top:1px dashed #888;
+		font-size:17px;
+		padding-bottom:50px;
+	}
+	
+	div.content p {
+		padding-bottom:15px;
+	}
+	
+	div.content a.right {
+		margin-left:15px;
 	}
 </style>
 
@@ -142,8 +152,14 @@
 </div>
 
 <div class="content">
-	<h2>fsakjsdfasd fasdklfasd f asd f asd</h2>
-	<p>alksdjfa sdflkasjdflkjasd fklj aslkd flkjas dlkf j</p>
+
+	<h1>Advice From Authors</h1>
+	
+	<h2>Norrie Thomas</h2>	
+	<strong><a href="http://www.amazon.com/An-Unbalanced-Success-Leadership-Libretto/dp/1484915046" target="_blank">An Unbalanced Success</a></strong>
+	<p><a class="right" href="http://www.amazon.com/An-Unbalanced-Success-Leadership-Libretto/dp/1484915046" target="_blank"><img src="/img/photos/an_unbalanced_success.jpg" /></a>Writing a book is the most exciting creative rush I have ever experienced. When you finally turn a corner and the writing is not work; when the book takes over and drives you; it is like the fastest, scariest roller-coaster that doesn’t end. I love that moment. I love that point in time- that peak- when your hair flies straight above your head, when you laugh so hard there is nothing in the universe except you and the book- when you finally have the courage to let go and not hold on.</p>
+	<p><strong>Tips:</strong><br />Do it! Writing a book creates energy. It shifts things and creates an unbalance; a pushing of forces not in your control. Reading is making love with words- really nice. If you like to make love, start writing- there are so many words just waiting for you.</p>
+	<p></p>
 </div>
 
 <% include ../partials/footer.ejs %>
