--- a/views/page/calc-book.ejs
+++ b/views/page/calc-book.ejs
@@ -124,13 +124,13 @@
 	</div>
 </div>
 <h2>CALCULATOR</h2>
-<p class="note">How many words do you write per minute? <input id="wordValue" type="number" name="quantity" min="1" max="100" value="50" /></p>
-<input id="wordSlider" type="range" min="1" max="100" value="50" />
+<p class="note">How many words do you write per minute? <input id="wordValue" type="number" name="quantity" min="1" max="100" value="25" /></p>
+<input id="wordSlider" type="range" min="1" max="100" value="25" />
 
 <div class="gap"></div>
 
-<p class="note">How many pages are you planning to write? <input id="pageValue" type="number" name="quantity" min="1" max="2000" value="300" /></p>
-<input id="pageSlider" type="range" min="1" max="2000" value="300" />
+<p class="note">How many pages are you planning to write? <input id="pageValue" type="number" name="quantity" min="1" max="2000" value="200" /></p>
+<input id="pageSlider" type="range" min="1" max="2000" value="200" />
 
 <div class="gap"></div>
 
@@ -227,6 +227,7 @@
     $('#hourSlider').change();
 
 		function calc_days(){
+			boundary_check();
 			var totalWords = pageValue.val()*250;
 			var editPercent = 1+(editValue.val()*.6);
 			var adjustedWords = totalWords*editPercent;
@@ -235,6 +236,36 @@
 			var totalDays = totalHours / hourValue.val();
 			var roudedDays = Math.round(totalDays * 10) / 10
 			days.text(addCommas(roudedDays));
+		}
+		
+		function boundary_check(){
+			if(wordValue.val() > 100){
+				$('#wordSlider,#wordValue').val(100);
+			}
+			if(wordValue.val() < 1){
+				$('#wordSlider,#wordValue').val(1);
+			}
+			
+			if(pageValue.val() > 2000){
+				$('#pageSlider,#pageValue').val(2000);
+			}
+			if(pageValue.val() < 1){
+				$('#pageSlider,#pageValue').val(1);
+			}
+			
+			if(editValue.val() > 10){
+				$('#editSlider,#editValue').val(10);
+			}
+			if(editValue.val() < 0){
+				$('#editSlider,#editValue').val(0);
+			}
+			
+			if(hourValue.val() > 24){
+				$('#hourSlider,#hourValue').val(24);
+			}
+			if(hourValue.val() < 0){
+				$('#hourSlider,#hourValue').val(0);
+			}
 		}
 		
 		function addCommas(nStr){
