--- a/views/page/calc-book.ejs
+++ b/views/page/calc-book.ejs
@@ -2,7 +2,7 @@
 
 <style>
 	h1.heading {
-		padding-bottom:35px;
+		padding-bottom:5px;
 	}
 
 	div.gap {
@@ -110,9 +110,21 @@
 	div.content a.right {
 		margin-left:15px;
 	}
+	
+	.sharing {
+		padding-bottom:30px;
+	}
+	
+	.twitter-share-button {
+		background:transparent;
+	}
 </style>
 
 <h1 class="heading">How long does it take to write a book?</h1>
+<div class="sharing">
+	<a href="https://twitter.com/share" class="twitter-share-button" data-via="duilen">Tweet</a>
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+</div>
 
 <div id="day_frame">
 	<h2>Total Days:</h2>
