--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -28,7 +28,48 @@
 		<% } %>
 	</div>
 
-	<div class="progress"></div>
+	<div class="sections">
+		<div class="section progress"></div>
+		<div class="section collaborators" style="display:none;">
+			<table>
+				<tr>
+					<td>User</td>
+					<% for (var i = 0; i < grid.gridButtons.length; i++) { %>
+						<td><%= grid.gridButtons[i].workUnit %></td>
+					<% } %>
+					<td>Total</td>
+				</tr>
+				<tr>
+					<% if(grid.user.name){ %>
+			  		<td><%= grid.user.name %></td>
+					<% }else{ %>
+						<td>Grid Master</td>
+					<% } %>
+					<% for (var i = 0; i < grid.gridButtons.length; i++) { %>
+						<td>0</td>
+					<% } %>
+					<td>0</td>
+				</tr>
+				<tr>
+					<td>joe@gmail.com</td>
+					<td colspan="<%= grid.gridButtons.length+1 %>">Invite Sent</td>
+				</tr>
+				<tr>
+					<td>john@gmail.com</td>
+					<td colspan="<%= grid.gridButtons.length+1 %>">Invite Rejected</td>
+				</tr>
+			</table>
+			<form action="/grids/<%= grid.slug %>/collaborators" method="post">
+	      <div class="field">
+	        <input type="text" class="text" name="collaborators" size="40"
+	          placeholder="Email" />
+	      </div>
+	      <div class="submit">
+	        <button type="submit" class="submit">Invite</button>
+	      </div>
+	    </form>
+		</div>
+	</div>
 	
 	<div class="share">
 		<% var share_url = encodeURIComponent("http://powerup.io/grids/"+grid.slug) %>
@@ -43,7 +84,7 @@
 		<a target="_blank" href="https://plus.google.com/share?url=<%- share_url %>"><img src="/img/google+.png"></a>
 	</div>
 	
-	<div class="collaborate">
+	<div class="collaborate" style="display:none">
     <form action="/grids/<%= grid.slug %>/collaborators" method="post"
       class="new_collaborator">
       <div class="field">
@@ -56,6 +97,11 @@
     </form>
     <div class="expand button">COLLABORATE</div>
   </div>
+
+	<div class="controls">
+		<button data-show="progress" class="stats active"><span class="icon"></span>Stats</button>
+		<button data-show="collaborators" class="users"><span class="icon"></span>Collaborators</button>
+	</div>
 </div>
 
 <% include ../partials/footer.ejs %>
