--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,11 +4,9 @@
 		<a class="right" target="_blank" href="http://twitter.com/powerupio">Twitter</a>
 		<a class="right" target="_blank" href="#" style="display:none;">G+</a>
 		<a href="/getting-started">Getting Started</a>
-		<a href="/faq" style="display:none;">FAQ</a>
-		<a href="/press" style="display:none;">Press</a>
-		<a href="/contribute" style="display:none;">Contribute</a>
 		<a href="/tos">TOS</a>
 		<a href="/contact">Contact</a>
+		<a href="/switchboard">Switchboard</a>
 	</div>
 </body>
 </html>
