--- a/views/user/card.ejs
+++ b/views/user/card.ejs
@@ -2,8 +2,7 @@
 
 <link href="/css/join.css" rel="stylesheet" type="text/css" />
 
-<h1>JOIN POWERUP PREMIUM</h1>
-<h2>Get unlimited grids and early access to premium Gear.</h2>
+<h1>UPDATE CARD</h1>
 
 <% include ../partials/payment_form.ejs %>
 
