--- a/views/partials/settings_form.ejs
+++ b/views/partials/settings_form.ejs
@@ -16,12 +16,12 @@
     <input type="text" name="user[email]" class="required" value="<%= user.email || '' %>" />
   </div>
   
-  <% if (user.stripeId) { %>
-    <div class="card">
-      <%= user.cardType %> ending in <%= user.cardLast4 %>
-    </div>
-  <% } %>
 	<ul class="right links">
+	  <% if (user.stripeId) { %>
+      <li><a href="/card">
+        Change card (<%= user.cardType %> ending in <%= user.cardLast4 %>)
+      </a></li>
+    <% } %>
 		<li><a href="/change_password">Change password</a></li>
 		<li><a href="/sign_out">Sign out</a></li>
 	</ul>
