--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -2,9 +2,19 @@
 
 <link href="/css/join.css" rel="stylesheet" type="text/css" />
 
-<h1>JOIN POWERUP PREMIUM</h1>
-<h2>Get unlimited grids and early access to premium Gear.</h2>
+<h1>UPGRADE FOR MORE GRIDS</h1>
+<h2>Get unlimited grids &amp; extras for $5/month</h2>
 
 <% include ../partials/payment_form.ejs %>
+
+<div class="divider"></div>
+
+<ul>
+	<h2>The Large Print</h2>
+	<li>PowerUp pros get unlimited grids</li>
+	<li>Switch back to free anytime</li>
+	<li>Access to premium features (coming soon)</li>
+	<li>Support our small team so we can continue to improve PowerUp.</li>
+</ul>
 
 <% include ../partials/footer.ejs %>
