--- a/public/css/join.css
+++ b/public/css/join.css
@@ -17,3 +17,50 @@
 .exp.field input.small.text {
   text-align: center;
 }
+
+.exp.field {
+  float:left;
+  width:auto;
+}
+
+.cvv.field {
+  clear:none;
+}
+
+.cvv.field input.small.text {
+  width:75px;
+}
+
+.card.field input.text,
+.name.field input.text {
+  width:375px;
+}
+
+button.submit {
+  padding:15px 54px;
+}
+
+#payment-form {
+  padding:15px 0 0 0;
+}
+
+.divider {
+  border-top:1px dashed #aaa;
+  margin:30px 0;
+}
+
+ul {
+  padding-bottom:100px;
+  padding-left:25px;
+}
+
+ul h2 {
+  padding-bottom:10px;
+}
+
+li {
+  font-size:18px;
+  list-style:square;
+  padding-bottom:10px;
+  line-height:1.2;
+}
