even more names

--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -264,8 +264,8 @@
 	}
 	
 	var sliders = [
-		["BABY","SOFT","FUZZY","SLIME","EGG","BOX","MEAT","SHOE","BLACK","WOOD","HORN","STRONG","HAMMER","BULL","IRON","AXE","SWORD","TANK","WAR","NUKE","STAR"],
-		["LIGHT","BIRD","RABBIT","RACING","ROCKET","SPINNING","CAR","WIND","WIELDING","BOAT","CARGO","SLIDE","WAGON","ROOSTER","FARM","BUCKET","GRASS","SLUG","WAX"],
-		["CLONES","ROBOTS","ROVERS","HACKERS","NERDS","FLYERS","RACERS","HEROES","BUTLERS","MONKS","BAKERS","WANNABES","PREACHERS","SERVANTS","GOBLINS","STOMPERS","HOOLIGANS","MONKEYS","SERPENTS","SLAVES","SAVAGES"]
+		["FEEBLE","BABY","SOFT","TOAST","FRISBEE","FUZZY","SLIME","EGG","BOX","MEAT","SHOE","BLACK","WOOD","HORN","STONE","STRONG","HAMMER","BULL","IRON","AXE","SWORD","TANK","WAR","NUKE","STAR"],
+		["LIGHT","BIRD","RABBIT","RACING","ROCKET","FIRE","SPINNING","CAR","WIND","WIELDING","BOAT","CARGO","SLIDE","WAGON","ROOSTER","FARM","BUCKET","GRASS","SLUG","WAX"],
+		["CLONES","ROBOTS","ROVERS","HACKERS","NERDS","FLYERS","RACERS","HEROES","EXTREMISTS","BUTLERS","MONKS","BAKERS","LUMBERJACKS","WANNABES","PREACHERS","WORKERS","SERVANTS","GOBLINS","STOMPERS","HOOLIGANS","PIRATES","MONKEYS","DUMMIES","SERPENTS","SLAVES","SAVAGES"]
 	]
 </script>
