more band names

--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -264,8 +264,8 @@
 	}
 	
 	var sliders = [
-		["FEEBLE","BABY","SOFT","TOAST","FRISBEE","FUZZY","SLIME","EGG","BOX","MEAT","SHOE","BLACK","WOOD","HORN","STONE","STRONG","HAMMER","BULL","IRON","AXE","SWORD","TANK","WAR","NUKE","STAR"],
-		["LIGHT","BIRD","RABBIT","RACING","ROCKET","FIRE","SPINNING","CAR","WIND","WIELDING","BOAT","CARGO","SLIDE","WAGON","ROOSTER","FARM","BUCKET","GRASS","SLUG","WAX"],
-		["CLONES","ROBOTS","ROVERS","HACKERS","NERDS","FLYERS","RACERS","HEROES","EXTREMISTS","BUTLERS","MONKS","BAKERS","LUMBERJACKS","WANNABES","PREACHERS","WORKERS","SERVANTS","GOBLINS","STOMPERS","HOOLIGANS","PIRATES","MONKEYS","DUMMIES","SERPENTS","SLAVES","SAVAGES"]
+		["","FEEBLE","PUNY","BABY","SOFT","DONUT","TOAST","ASS","FRISBEE","FUZZY","JELLY","SLIME","EGG","BOX","DITCH","MEAT","SHOE","BLACK","RED","BLUE","WOOD","HORN","STONE","STRONG","HAMMER","BULL","IRON","AXE","SWORD","BANK","DRAGON","TANK","WAR","NUKE","SPACE","STAR",""],
+		["","LIGHT","BIRD","RABBIT","WEASEL","RACING","ROCKET","SHIP","BUZZING","LAUNCHING","ASSISTING","FIRE","SPINNING","GIGGLING","CIRCUS","SHUFFLING","FIXING","CAR","WIND","INVENTING","JUDGING","WIELDING","BOAT","CARGO","SLIDE","WAGON","ROOSTER","FARM","BUCKET","GRASS","BELLY","SLUG","WAX",""],
+		["","CLONES","ROBOTS","ROVERS","HACKERS","NERDS","FLYERS","SPEEDSTERS","RACERS","SPIES","NURSES","HEROES","EXTREMISTS","BUTLERS","MONKS","BAKERS","LUMBERJACKS","WANNABES","TRAVELERS","PREACHERS","WORKERS","SERVANTS","CLOWNS","GOBLINS","STOMPERS","HOOLIGANS","PIRATES","MASTERS","KINGS","BANDITS","MONKEYS","DUMMIES","SERPENTS","SLAVES","DINOSAURS","SAVAGES",""]
 	]
 </script>
