--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -264,8 +264,8 @@
 	}
 	
 	var sliders = [
-		["","FEEBLE","PUNY","BABY","SOFT","DONUT","TOAST","ASS","FRISBEE","FUZZY","JELLY","SLIME","EGG","BOX","DITCH","MEAT","SHOE","BLACK","RED","BLUE","WOOD","HORN","STONE","STRONG","HAMMER","BULL","IRON","AXE","SWORD","BANK","DRAGON","TANK","WAR","NUKE","SPACE","STAR",""],
-		["","LIGHT","BIRD","RABBIT","WEASEL","RACING","ROCKET","SHIP","BUZZING","LAUNCHING","ASSISTING","FIRE","SPINNING","GIGGLING","CIRCUS","SHUFFLING","FIXING","CAR","WIND","INVENTING","JUDGING","WIELDING","BOAT","CARGO","SLIDE","WAGON","ROOSTER","FARM","BUCKET","GRASS","BELLY","SLUG","WAX",""],
-		["","CLONES","ROBOTS","ROVERS","HACKERS","NERDS","FLYERS","SPEEDSTERS","RACERS","SPIES","NURSES","HEROES","EXTREMISTS","BUTLERS","MONKS","BAKERS","LUMBERJACKS","WANNABES","TRAVELERS","PREACHERS","WORKERS","SERVANTS","CLOWNS","GOBLINS","STOMPERS","HOOLIGANS","PIRATES","MASTERS","KINGS","BANDITS","MONKEYS","DUMMIES","SERPENTS","SLAVES","DINOSAURS","SAVAGES",""]
+		["FEEBLE","PUNY","BUBBLE","NOODLE","BABY","SOFT","SAUCE","MONEY","HAPPY","LUCKY","DONUT","NEON","TOAST","ASS","NUDE","ORGAN","FRISBEE","FUZZY","JELLY","FISH","SLIME","EGG","BOX","DITCH","MEAT","SHOE","WOOD","HORN","STONE","STORM","HAMMER","PONY","BULL","IRON","AXE","SWORD","BANK","DRAGON","TANK","WAR","GRID","NUKE","SAUCER","SPACE","STAR"],
+		["LIGHT","BIRD","RABBIT","WEASEL","JET","RACING","ROCKET","SHIP","BUZZING","LAUNCHING","JUGGLING","ASSISTING","FIRE","SPINNING","GIGGLING","WAVING","RIDING","WAXING","SPANKING","SHUFFLING","BUCKET","FIXING","CAR","WIND","INVENTING","JUDGING","WIELDING","BOAT","CARGO","SLIDE","WAGON","ROOSTER","FARM","BUCKET","DOLL","GRASS","MOOSE","TEMPLE","LOVING","BELLY","SLUG","WAX"],
+		["DROIDS","CLONES","ROBOTS","BLASTERS","TROOPERS","ROVERS","DRONES","HACKERS","NERDS","PILOTS","FLYERS","SPEEDSTERS","RACERS","WRITERS","MAKERS","INTERNS","SPIES","NURSES","HEROES","EXTREMISTS","BUTLERS","RANGERS","MONKS","BAKERS","DEPUTIES","TRADERS","LUMBERJACKS","FANS","WANNABES","INMATES","TRAVELERS","PREACHERS","WORKERS","SERVANTS","CLOWNS","SIDESHOW","GOBLINS","STOMPERS","HOOLIGANS","PIRATES","PUPPETS","CIRCUS","MASTERS","VIKINGS","KINGS","QUEENS","BANDITS","ARMY","MONKEYS","DUMMIES","WITCHES","TROLLS","SLAVES","DINOSAURS","SAVAGES"]
 	]
 </script>
