even more names

--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -195,8 +195,8 @@
 	<h1 id="band_name"></h1>
 	
 	<div class="get_started">
-		<p></p>
-		<a href="/getting-started/1">GET STARTED</a>
+		<p>Be Legendary</p>
+		<a href="/getting-started/1">START PRACTICING</a>
 	</div>
 </div>
 
@@ -264,8 +264,8 @@
 	}
 	
 	var sliders = [
-		["FEEBLE","PUNY","BUBBLE","NOODLE","BABY","SOFT","GRASS","WHISKEY","SAUCE","MONEY","HAPPY","LUCKY","DONUT","NEON","TOAST","ASS","NUDE","ORGAN","FRISBEE","PLAID","DENIM","FUZZY","JELLY","FISH","EGG","BOX","DITCH","MEAT","SHOE","WOOD","HORN","STONE","STORM","HAMMER","LAMA","PONY","BULL","IRON","AXE","SWORD","BANK","DRAGON","TANK","WAR","HARDCORE","GRID","NUKE","SAUCER","SPACE","STAR"],
-		["LIGHT","BIRD","SOLAR","RABBIT","WEASEL","JET","RACING","CODE","FED","ROCKET","SHIP","BUZZING","LAUNCHING","JUGGLING","ASSISTING","FIRE","GIGGLING","WAVING","RIDING","WAXING","SPANKING","SHUFFLING","BUCKET","FIXING","CAR","WIND","INVENTING","JUDGING","WIELDING","BOAT","CARGO","SLIDE","WAGON","ROOSTER","FARM","BUCKET","DOLL","MOOSE","TEMPLE","LOVING","BELLY","SLUG","WAX"],
-		["DROIDS","CLONES","ROBOTS","BLASTERS","TROOPERS","ROVERS","DRONES","HACKERS","NERDS","PILOTS","FLYERS","SPEEDSTERS","RACERS","WRITERS","MAKERS","INTERNS","SPIES","NURSES","HEROES","EXTREMISTS","BUTLERS","RANGERS","MONKS","BAKERS","DEPUTIES","TRADERS","MARINES","LUMBERJACKS","FANS","WANNABES","INMATES","TRAVELERS","PREACHERS","WORKERS","SERVANTS","CLOWNS","SIDESHOW","GOBLINS","STOMPERS","HOOLIGANS","PIRATES","PUPPETS","CIRCUS","MASTERS","VIKINGS","KINGS","QUEENS","BANDITS","ARMY","MONKEYS","DUMMIES","WARRIORS","WITCHES","PEONS","TROLLS","SLAVES","DINOSAURS","SAVAGES","ZOMBIES"]
+		["FEEBLE","PUNY","OLD","UGLY","FAT","BUBBLE","NOODLE","DOMESTIC","BABY","KID","SOFT","GRASS","URBAN","WHISKEY","SAUCE","MONEY","HAPPY","LUCKY","DONUT","NEON","TOAST","ASS","NUDE","ORGAN","FRISBEE","PLAID","DENIM","FUZZY","JELLY","FISH","EGG","BOX","DITCH","MEAT","SHOE","WOOD","HORN","STONE","STORM","HAMMER","LAMA","PONY","BULL","BUFFALO","WILD","IRON","AXE","SWORD","BANK","PUZZLE","DRAGON","TANK","WAR","HARDCORE","GRID","NUKE","SAUCER","SPACE","STAR"],
+		["LIGHT","BIRD","SOLAR","RABBIT","WEASEL","JET","RACING","CODE","SPUN","FED","STYLE","ROCKET","SHIP","BUZZING","LAUNCHING","JUGGLING","ASSISTING","FIRE","GIGGLING","TICKLING","SHOP","WAVING","RIDING","WAXING","SPANKING","SHUFFLING","BUCKET","FIXING","CAR","WIND","INVENTING","JUDGING","WIELDING","BOAT","CARGO","SLIDE","WAGON","ROOSTER","FARM","BUCKET","DOLL","MOOSE","TEMPLE","LOVING","BELLY","SLUG","BLIMP","WAX","TIME","EON"],
+		["DROIDS","CLONES","ROBOTS","BLASTERS","TROOPERS","ROVERS","DRONES","HOAX","HACKERS","NERDS","PILOTS","FLYERS","SPEEDSTERS","RACERS","WRITERS","MAKERS","INTERNS","SPIES","NURSES","HEROES","EXTREMISTS","BUTLERS","RANGERS","MONKS","BAKERS","GOALIES","CLEANERS","DEPUTIES","TRADERS","MARINES","LUMBERJACKS","FANS","WANNABES","INMATES","TRAVELERS","PREACHERS","WORKERS","SERVANTS","CLOWNS","SIDESHOW","GOBLINS","STOMPERS","HOOLIGANS","PIRATES","COLONY","PUPPETS","CIRCUS","MASTERS","VIKINGS","KINGS","QUEENS","BANDITS","ARMY","MONKEYS","DUMMIES","WARRIORS","WITCHES","PEONS","TROLLS","SLAVES","DINOSAURS","SAVAGES","ZOMBIES"]
 	]
 </script>
