--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -110,9 +110,7 @@
 	
 	div.content {
 		clear:both;
-		margin-top:50px;
 		padding-top:50px;
-		border-top:1px dashed #888;
 		font-size:17px;
 		padding-bottom:50px;
 	}
@@ -156,6 +154,21 @@
 		margin-left:10px;
 		float:left;
 	}
+	
+	.gap {
+		border-top:1px dashed #888;
+		margin:30px 0;
+	}
+	
+	.tips {
+		padding:20px 0 75px 20px;
+		list-style:square;
+		font-size:16px;
+	}
+	
+	.tips li {
+		padding-bottom:10px;
+	}
 </style>
 
 
@@ -196,13 +209,40 @@
 	
 	<div class="get_started">
 		<p>Be Legendary</p>
-		<a href="/getting-started/1">START PRACTICING</a>
+		<a href="/getting-started/6">START PRACTICING</a>
 	</div>
 </div>
 
 
 <div class="content">
+	<h2>CALL DIBS ON YOUR BAND NAME</h2>
+	<div id="disqus_thread"></div>
+  <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+      var disqus_shortname = 'powerupio'; // required: replace example with your forum shortname
 
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  
+	<div class="gap"></div>
+
+	<h2>Bonus tips for choosing the perfect band name</h2>
+	<ol class="tips">
+		<li><strong>Choose words that evoke strong visual imagery.</strong> If your band name paints an immediate image in someones brain, they'll be much more likely to remember you.</li>
+		<li><strong>Combine words in unexpected ways.</strong> This is another great tactic to get your band embedded in your fans memory. When unusual things are mixed, it causes the brain to evaluate the combination. <a href="http://universosportinguista.blogspot.com/2009/09/surrealism-makes-you-smarter.html" target="_blank">[study on surrealism]</a></li>
+		<li><strong>Be original.</strong> Don't be one of those bands that tries to make a name by hooking onto the identity of an existing famous band.</li>
+		<li><strong>Drugs aren't the path to creativity.</strong> Anyone can be creative without the use of chemical stimulants. Expose yourself to new ideas, people and environments. Then be sure to continually write down your thoughts.</li>
+		<li><strong>Be approachable.</strong> Think about your fans and how to connect with them. Let them help you create and explore. Maybe this line of thinking helps you with a band name but hopefully it's part of your overall messaging.</li>
+		<li><strong>Have fun with it.</strong> When you take things too seriously it's hard to be open to so many great possibilities.</li>
+		<p>If this band name randomizer was helpful at all in your naming process please send us an email. We'd love to hear your story! <a href="mailto:tips@powerup.io">tips@powerup.io</a></p>
+	</ol>
 </div>
 
 <% include ../partials/footer.ejs %>
@@ -264,8 +304,8 @@
 	}
 	
 	var sliders = [
-		["FEEBLE","PUNY","ANT","FAIRY","OLD","LOST","UGLY","FAT","BUBBLE","BANANA","SOLAR","NOODLE","TACO","DOMESTIC","BABY","SOFT","GRASS","URBAN","WHISKEY","SAUCE","FANCY","MONEY","HAPPY","LUCKY","DONUT","NEON","TOAST","ASS","NUDE","ORGAN","RETRO","FRISBEE","PLAID","DENIM","FUZZY","JELLY","FISH","EGG","BOX","DITCH","RAD","MEAT","SHOE","WOOD","HORN","ROAD","SILICON","STONE","STORM","HAMMER","LAMA","PONY","BULL","BUFFALO","WILD","IRON","AXE","SWORD","BANK","PUZZLE","OGRE","DRAGON","TANK","WAR","SUPER","HARDCORE","GRID","NUKE","SAUCER","SPACE","STAR"],
-		["LIGHT","LASER","COMET","FLASH","BIRD","RABBIT","WEASEL","JET","RACING","CODE","SPUN","FED","STYLE","ROCKET","SHIP","BUZZING","LAUNCHING","JUGGLING","ASSISTING","FIRE","GIGGLING","SHOP","WAVING","RIDING","WAXING","SPANKING","KICKING","SHUFFLING","BUCKET","FIXING","CAR","TRUCK","WIND","INVENTING","JUDGING","WIELDING","BOAT","CARGO","CLOCK","SLIDE","WAGON","ROOSTER","FARM","BUCKET","DOLL","MOOSE","TEMPLE","LOVING","BELLY","SLUG","BLIMP","WAX","TAR","TIME"],
-		["DROIDS","CLONES","ROBOTS","DEVICE","IMPLANTS","BLASTERS","ASTRONAUT","THEORY","TECHNOLOGY","PROTOTYPE","TROOPERS","ROVERS","ARTISTS","DRONES","HOAX","HACKERS","NERDS","PILOTS","FLYERS","SPEEDSTERS","EXHIBIT","RACERS","WRITERS","MAKERS","INTERNS","SPIES","NURSES","HEROES","EXTREMISTS","HARVEST","BUTLERS","RANGERS","MONKS","BAKERS","GOALIES","CLEANERS","DEPUTIES","TRADERS","MARINES","LUMBERJACKS","FANS","WANNABES","INMATES","TRAVELERS","PREACHERS","WORKERS","SERVANTS","CLOWNS","HELPERS","SIDESHOW","ENEMIES","GOBLINS","WAGER","STOMPERS","HOOLIGANS","PIRATES","COLONY","PUPPETS","CIRCUS","COWBOYS","MASTERS","VIKINGS","KINGS","QUEENS","BANDITS","ARMY","MONKEYS","DUMMIES","JUNKIES","WARRIORS","WITCHES","PEONS","TROLLS","SLAVES","HIVE","DINOSAURS","SAVAGES","ZOMBIES"]
+		["FEEBLE","PUNY","ANT","FAIRY","TINY","OLD","LOST","GLASS","SLOPPY","UGLY","FAT","BUBBLE","BANANA","SOLAR","NOODLE","TACO","DOMESTIC","BABY","SOFT","GRASS","URBAN","BUTTON","WHISKEY","SAUCE","FANCY","MONEY","HAPPY","LUCKY","DONUT","NEON","TOAST","SCRAPPY","ASS","NUDE","ORGAN","RETRO","FRISBEE","PLAID","DENIM","FUZZY","JELLY","FISH","EGG","BOX","DITCH","RAD","MEAT","SHOE","WOOD","HORN","ROAD","SILICON","STONE","STORM","HAMMER","LAMA","PONY","GADGET","COW","BULL","BUFFALO","WILD","IRON","AXE","BEARD","SWORD","BANK","PUZZLE","OGRE","DRAGON","TANK","WAR","SUPER","HARDCORE","MAGIC","POWER","GRID","NUKE","SAUCER","SPACE","STAR"],
+		["LIGHT","LASER","COMET","FLASH","ZIP","BIRD","RABBIT","BURST","WEASEL","JET","RACING","CODE","SPUN","FED","STYLE","ROCKET","SHIP","BUZZING","LAUNCHING","JUGGLING","ASSISTING","FIRE","GIGGLING","SHOP","WAVING","RIDING","WAXING","FRIENDLY","SPANKING","KICKING","TRIMMING","TESTING","BELL","SHUFFLING","BUCKET","FIXING","CAR","TRUCK","WIND","INVENTING","JUDGING","WIELDING","BOAT","CARGO","CLOCK","SLIDE","WAGON","ROOSTER","FARM","BUCKET","DOLL","MOOSE","TEMPLE","LOVING","BELLY","SLUG","BLIMP","WATCHING","SITTING","WAX","TAR","TIME"],
+		["DROIDS","CLONES","ROBOTS","DEVICE","IMPLANTS","BLASTERS","ASTRONAUT","EXPERIMENT","THEORY","TECHNOLOGY","PROTOTYPE","TROOPERS","ROVERS","ARTISTS","DRONES","HOAX","HACKERS","NERDS","PILOTS","FLYERS","SPEEDSTERS","EXHIBIT","RACERS","WRITERS","MAKERS","INTERNS","SPIES","NURSES","HEROES","EXTREMISTS","HARVEST","BUTLERS","RANGERS","MONKS","BAKERS","GOALIES","CLEANERS","DEPUTIES","TRADERS","MARINES","LUMBERJACKS","FANS","WANNABES","HATERS","INMATES","TRAVELERS","PREACHERS","WORKERS","SERVANTS","CLOWNS","HELPERS","SIDESHOW","OBJECT","ENEMIES","GOBLINS","WAGER","STOMPERS","HOOLIGANS","PIRATES","COLONY","REMOVERS","PUPPETS","POTION","TONIC","CIRCUS","COWBOYS","MASTERS","VIKINGS","KINGS","QUEENS","BANDITS","ARMY","GANG","MONKEYS","DUMMIES","JUNKIES","WARRIORS","WITCHES","PEONS","TROLLS","SLAVES","HIVE","DINOSAURS","SAVAGES","ZOMBIES"]
 	]
 </script>
