local jquery ui

--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/head.ejs %>
 
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+<link rel="stylesheet" href="/css/jquery-ui.css" />
 <style>
 	h1.heading {
 		padding-bottom:5px;
@@ -247,7 +247,7 @@
 
 <% include ../partials/footer.ejs %>
 
-<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script src="/js/jquery-ui.js"></script>
 <script>
 	$(function(){
 		$("button.random").click(random_name)
