--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -33,11 +33,11 @@
 		<div class="section collaborators" style="display:none;">
 			<table>
 				<tr>
-					<td>User</td>
+					<th>User</th>
 					<% for (var i = 0; i < grid.gridButtons.length; i++) { %>
-						<td><%= grid.gridButtons[i].workUnit %></td>
+						<th><%= grid.gridButtons[i].workUnit %></th>
 					<% } %>
-					<td>Total</td>
+					<th>Total</th>
 				</tr>
 				<tr>
 					<% if (grid.user.name) { %>
@@ -45,10 +45,12 @@
 					<% }else{ %>
 						<td>Grid Master</td>
 					<% } %>
+					
+					<% var colors = ['black', 'blue', 'red']; %>
 					<% for (var i = 0; i < grid.gridButtons.length; i++) { %>
-						<td>0</td>
+						<td class="<%- colors[i] %>">0</td>
 					<% } %>
-					<td>0</td>
+					<td class="total">0</td>
 				</tr>
 				<tr>
 					<td>joe@gmail.com</td>
