--- a/views/grid/index.ejs
+++ b/views/grid/index.ejs
@@ -11,6 +11,7 @@
 
     <ul class="grid_list">
       <li>
+				<a class="edit" href="/grids/<%- grid.slug %>/edit">EDIT</a>
 				<div class="fill" style="width:<%= percent %>%;"></div>
         <a href="/grids/<%- grid.slug %>"><%= grid.name %></a>
       </li>
