--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -42,6 +42,20 @@
   margin-right:0;
 }
 
+.field .delete {
+  position:absolute;
+  top:13px;
+  right:10px;
+  z-index:1000;
+  color:#444;
+  opacity:.3;
+  font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue",arial;
+}
+
+.field:hover .delete {
+  opacity:1;
+}
+
 h2 {
   padding-bottom:5px;
 }
