--- a/views/grid/edit.ejs
+++ b/views/grid/edit.ejs
@@ -10,28 +10,14 @@
   <div class="field">
 		<label>WORK UNITS</label>
 		
-		<% if(grid.workUnit){ %>
-			<% var workUnits = grid.workUnit.split(',') %>
-		<% }else{ %>
-			<% var workUnits = [] %>
-		<% } %>
-		
-		<% if(workUnits.length > 0){ %>
-    	<input type="text" name="workUnit[]" value="<%= workUnits[0] %>" class="small work_unit required" />
-		<% }else{ %>
-			<input type="text" name="workUnit[]" value="" class="small work_unit required" />
-		<% } %>
-		
-		<% if(workUnits.length > 1){ %>
-			<input type="text" name="workUnit[]" class="small work_unit" value="<%= grid.workUnit.split(',')[1] %>" />
-		<% }else{ %>
-			<input type="text" name="workUnit[]" class="small work_unit" value="" />
-		<% } %>
-		
-		<% if(workUnits.length > 2){ %>
- 			<input type="text" name="workUnit[]" class="small last work_unit" value="<%= grid.workUnit.split(',')[2] %>" />
-		<% }else{ %>
-			<input type="text" name="workUnit[]" class="small last work_unit" value="" />
+		<% for (var i = 0; i < grid.gridButtons.length; i++) { %>
+		  <% var btn = grid.gridButtons[i]; %>
+    	<input type="text" name="gridButtons[<%- btn._id %>]"
+    	  value="<%= btn.workUnit %>" class="small work_unit required" />
+    <% } %>
+    
+    <% for (var i = (3 - grid.gridButtons.length); i > 0; i--) { %>
+      <input type="text" name="workUnits[]" value="" class="small work_unit required" />
 		<% } %>
   </div>
 
@@ -43,20 +29,15 @@
 		<label>PLAYER 1</label><input type="text" disabled value="<%= grid_master %>" />
 	</div>
 	
-	<div class="field">
-		<a href="#" class="delete">DELETE</a>
-		<label>PLAYER 2</label><input type="text" disabled value="John" />
-	</div>
-	
-	<div class="field">
-		<a href="#" class="delete">DELETE</a>
-		<label>PLAYER 3</label><input type="text" disabled value="joe@user.com (invited)" />
-	</div>
-	
-	<div class="field">
-		<a href="#" class="delete">DELETE</a>
-		<label>PLAYER 4</label><input type="text" disabled value="sarah@user.com (rejected)" />
-	</div>
+	<% for (var i = 0; i < grid.collaborators.length; i++) { %>
+	  <% var user = grid.collaborators[i]; %>
+  	<div class="field">
+  		<a href="#" class="delete">DELETE</a>
+  		<label>PLAYER <%- i + 2 %></label>
+  		<input type="text" disabled value="<%- user.name || user.email %>" />
+  	</div>
+  <% } %>
+  
 
 	<button type="submit" class="submit">Save</button>
 </form>
