--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,6 +18,7 @@
 	
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/socket.io.js"></script>
+	<script type="text/javascript" src="/js/underscore-min.js"></script>
 	<script type="text/javascript" src="/js/jquery.easing.js"></script>
 	<script type="text/javascript" src="/js/actions.js"></script>
 	
