--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -50,10 +50,13 @@
   color:#444;
   opacity:.3;
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue",arial;
+  -webkit-transition:all 400ms;
+  -moz-transition:all 400ms;
+  transition:all 400ms;
 }
 
 .field:hover .delete {
-  opacity:1;
+  opacity:.7;
 }
 
 h2 {
