--- a/views/page/switchboard.ejs
+++ b/views/page/switchboard.ejs
@@ -15,6 +15,13 @@
 			<p>This is a simple calculator to give you a quick estimate of how long it will take to write a book.</p>
 		</div>
 	</li>
+	<li>
+		<img src="/img/icons/music.png" />
+		<div>
+			<h2><a href="/generator/band_names">Band Name Generator</a></h2>
+			<p>Need an awesome name to unite the band? Look no further.</p>
+		</div>
+	</li>
 </ul>
 
 
